test/invalid/idl/maplike-args.webidl
interface X {
  maplike<DOMString, ByteString>();
};
